--- a/frontEnd/src/app/patient/pages/list-page/list-page.component.html
+++ b/frontEnd/src/app/patient/pages/list-page/list-page.component.html
@@ -1,1 +1,11 @@
-<p>list-page works!</p>
+<h1>Listado de pacientes</h1>
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+
+  <div *ngFor="let patient of patients"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <patients-patient-card [patient]="patient"></patients-patient-card>
+  </div>
+
+</div>
