[ADD] patients img via pipe transformation

--- a/frontEnd/src/app/patient/components/card/card.component.html
+++ b/frontEnd/src/app/patient/components/card/card.component.html
@@ -5,6 +5,8 @@
   </mat-card-header>
 
   <!-- TODO: Imagen  -->
+  {{ patient | patientImage }}
+  <img mat-card-image [src]="patient | patientImage" [alt]="patient.superhero">
 
   <mat-card-content class="mt-2">
     <h4>{{ patient.publisher }}</h4>
