--- a/frontEnd/src/app/patient/pages/patient-page/patient-page.component.html
+++ b/frontEnd/src/app/patient/pages/patient-page/patient-page.component.html
@@ -1,1 +1,52 @@
-<p>patient-page works!</p>
+<ng-template #divLoading>
+  <mat-grid-list cols="1" rowHeight="2:1">
+    <mat-grid-tile>
+      <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
+</ng-template>
+
+<div *ngIf="patient; else divLoading" class="grid p-2">
+
+  <mat-card class="col-12 sm:col-6">
+
+    <mat-card-header>
+      <mat-card-title>{{ patient.alter_ego }}</mat-card-title>
+      <mat-card-subtitle>{{ patient.superhero }}</mat-card-subtitle>
+    </mat-card-header>
+
+
+    <img [src]="patient | patientImage" [alt]="patient.superhero" mat-card-image  />
+
+  </mat-card>
+
+  <mat-card class="col-12 sm:col-6">
+
+    <mat-card-header>
+      <mat-card-title>Información</mat-card-title>
+      <mat-card-subtitle>{{ patient.superhero }}</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item>{{ patient.first_appearance }}</mat-list-item>
+        <mat-list-item>{{ patient.characters }}</mat-list-item>
+        <mat-list-item>{{ patient.publisher }}</mat-list-item>
+        <mat-list-item>{{ patient.alter_ego }}</mat-list-item>
+      </mat-list>
+
+      <button
+        mat-button
+        color="warn"
+        (click)="goBack()"
+      >
+        Regresar
+      </button>
+
+    </mat-card-content>
+
+
+  </mat-card>
+
+
+</div>
