--- a/frontEnd/src/app/patient/pages/patient-page/patient-page.component.html
+++ b/frontEnd/src/app/patient/pages/patient-page/patient-page.component.html
@@ -11,12 +11,12 @@
   <mat-card class="col-12 sm:col-6">
 
     <mat-card-header>
-      <mat-card-title>{{ patient.alter_ego }}</mat-card-title>
-      <mat-card-subtitle>{{ patient.superhero }}</mat-card-subtitle>
+      <mat-card-title>{{ patient.name }}</mat-card-title>
+      <mat-card-subtitle>{{ patient.firstLastName }} {{ patient.secondLastName }}</mat-card-subtitle>
     </mat-card-header>
 
 
-    <img [src]="patient | patientImage" [alt]="patient.superhero" mat-card-image  />
+    <img [src]="patient | patientImage" [alt]="patient.name" mat-card-image  />
 
   </mat-card>
 
@@ -24,15 +24,53 @@
 
     <mat-card-header>
       <mat-card-title>Información</mat-card-title>
-      <mat-card-subtitle>{{ patient.superhero }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ patient.id }}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
       <mat-list>
-        <mat-list-item>{{ patient.first_appearance }}</mat-list-item>
-        <mat-list-item>{{ patient.characters }}</mat-list-item>
-        <mat-list-item>{{ patient.publisher }}</mat-list-item>
-        <mat-list-item>{{ patient.alter_ego }}</mat-list-item>
+
+        <mat-list-item>
+          <strong>Correo:</strong>
+          {{ patient.email }}
+        </mat-list-item>
+
+        <mat-list-item>
+          <strong>Fecha de nacimiento:</strong>
+          {{ patient.birthDate }}
+        </mat-list-item>
+
+        <mat-list-item>
+          <strong>Dirección:</strong>
+          {{ patient.address }}
+        </mat-list-item>
+
+        <mat-list-item>
+          <strong>Telefono principal:</strong>
+          {{ patient.firstPhoneNumber }}
+        </mat-list-item>
+
+        <mat-list-item>
+          <strong>Telefono secundario:</strong>
+          {{ patient.secondPhoneNumber }}
+        </mat-list-item>
+
+        <br>
+
+        <strong>Patologías:</strong>
+        <mat-chip-listbox>
+          <mat-chip *ngFor="let name of patient.patology.split(',')">
+            {{ name }}
+          </mat-chip>
+        </mat-chip-listbox>
+
+        <strong>Tratamiento:</strong>
+        <mat-chip-listbox>
+          <mat-chip *ngFor="let name of patient.treatment.split(',')">
+            {{ name }}
+          </mat-chip>
+        </mat-chip-listbox>
+
       </mat-list>
 
       <button
