--- a/frontEnd/src/app/patient/pages/search-page/search-page.component.html
+++ b/frontEnd/src/app/patient/pages/search-page/search-page.component.html
@@ -1,1 +1,36 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+
+  <h3>Buscador</h3>
+
+  <mat-form-field>
+    <mat-label>Buscador de pacientes</mat-label>
+    <input
+      type="text"
+      matInput
+      [formControl]="searchInput"
+      (input)="searchPatient()"
+      [matAutocomplete]="auto"
+    />
+
+    <mat-autocomplete autoActiveFirstOption
+      #auto="matAutocomplete"
+      (optionSelected)="onSelectedOption( $event )"
+      >
+      <mat-option *ngFor="let patient of patients" [value]="patient">
+        {{ patient.name }}
+      </mat-option>
+
+      <mat-option
+        *ngIf="patients.length === 0 && searchInput.value && searchInput.value.length > 0"
+        value="">
+        No se encontró nada con el término {{ searchInput.value }}
+      </mat-option>
+    </mat-autocomplete>
+
+  </mat-form-field>
+
+
+  {{ selectedPatient | json }}
+
+
+</div>
