--- a/frontEnd/src/app/patient/pages/new-page/new-page.component.html
+++ b/frontEnd/src/app/patient/pages/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <h1>
-  Editar / Agregar
-  <small>Paciente</small>
+  {{ currentPatientToUpdate ? 'Editar' : 'Agregar'}}
+  <small>paciente</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -11,7 +11,7 @@
     <mat-card>
       <mat-card-content>
 
-        <div class="grid">
+        <form class="grid" [formGroup]="patientForm" (ngSubmit)="onSubmit()">
 
           <mat-form-field class="col-12">
             <mat-label>Identificación</mat-label>
@@ -22,6 +22,7 @@
               maxlength="9"
               pattern="\d*"
               inputmode="numeric"
+              formControlName="id"
             />
           </mat-form-field>
 
@@ -31,6 +32,7 @@
               matInput
               type="text"
               required
+              formControlName="name"
             />
           </mat-form-field>
 
@@ -40,6 +42,7 @@
               matInput
               type="text"
               required
+              formControlName="firstLastName"
             />
           </mat-form-field>
 
@@ -49,6 +52,7 @@
               matInput
               type="text"
               required
+              formControlName="secondLastName"
             />
           </mat-form-field>
 
@@ -61,6 +65,7 @@
               maxlength="8"
               pattern="\d*"
               inputmode="numeric"
+              formControlName="firstPhoneNumber"
             />
           </mat-form-field>
 
@@ -72,6 +77,7 @@
               maxlength="8"
               pattern="\d*"
               inputmode="numeric"
+              formControlName="secondPhoneNumber"
             />
           </mat-form-field>
 
@@ -83,6 +89,7 @@
               matInput
               type="text"
               required
+              formControlName="email"
             />
           </mat-form-field>
 
@@ -92,12 +99,13 @@
               matInput
               type="text"
               required
+              formControlName="address"
             />
           </mat-form-field>
 
           <mat-form-field color="accent" class="col-12">
             <mat-label>Fecha de nacimiento</mat-label>
-            <input matInput [matDatepicker]="picker1">
+            <input matInput [matDatepicker]="picker1" formControlName="birthDate">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1></mat-datepicker>
@@ -108,6 +116,7 @@
             <input
               matInput
               type="text"
+              formControlName="patology"
             />
           </mat-form-field>
 
@@ -116,31 +125,28 @@
             <input
               matInput
               type="text"
+              formControlName="treatment"
             />
           </mat-form-field>
 
-          <mat-form-field class="col-12">
-            <mat-label>Creador</mat-label>
-            <mat-select required="">
-              <mat-option *ngFor="let publisher of publishers"
-                [value]="publisher.id">
-                {{ publisher.desc }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
+
+        </form>
 
         <div class="flex justify-content-between">
           <button
+          *ngIf="currentPatientToUpdate"
             mat-flat-button
             color="warn"
+            (click)="onDeletePatient()"
           >
             Borrar
           </button>
+          <span></span>
 
           <button
             mat-flat-button
             color="primary"
+            (click)="onSubmit()"
           >
             <mat-icon>save</mat-icon>
             Guardar
@@ -154,9 +160,21 @@
   <div class="col-12 sm:col-6">
 
     <mat-card>
-      <img src="" alt="imagen del héroe" mat-card-image>
+      <img [src]="currentPatient | patientImage" alt="no-image" mat-card-image>
     </mat-card>
 
   </div>
 </div>
+
+<pre>
+  Formulario valido: {{ patientForm.valid | json }}
+</pre>
+
+<pre>
+  {{ currentPatient | json }}
+</pre>
+
+<pre>
+  currentPatientToUpdate: {{ currentPatientToUpdate | json }}
+</pre>
 
