--- a/frontEnd/src/app/patient/pages/search-page/search-page.component.html
+++ b/frontEnd/src/app/patient/pages/search-page/search-page.component.html
@@ -29,8 +29,18 @@
 
   </mat-form-field>
 
+  <mat-divider></mat-divider>
 
-  {{ selectedPatient | json }}
 
+</div>
+
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+
+  <div *ngIf="selectedPatient"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <patients-patient-card [patient]="selectedPatient!"></patients-patient-card>
+  </div>
 
 </div>
