--- a/frontEnd/src/app/patient/pages/record-page/record-page.component.html
+++ b/frontEnd/src/app/patient/pages/record-page/record-page.component.html
@@ -1,1 +1,20 @@
-<p>record-page works!</p>
+<br>
+<br>
+
+
+<mat-toolbar color="primary" class="mat-align-center" *ngIf="records === []">
+  <h1>
+    <strong> Historial clínico </strong>
+  </h1>
+</mat-toolbar>
+
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+
+  <div *ngFor="let record of records"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <records-record-card [record]="record"></records-record-card>
+  </div>
+
+</div>
