--- a/frontEnd/src/app/patient/pages/record-page/record-page.component.html
+++ b/frontEnd/src/app/patient/pages/record-page/record-page.component.html
@@ -2,7 +2,7 @@
 <br>
 
 
-<mat-toolbar color="primary" class="mat-align-center" *ngIf="records === []">
+<mat-toolbar color="primary" class="mat-align-center" *ngIf="showTittle">
   <h1>
     <strong> Historial clínico </strong>
   </h1>
