--- a/frontEnd/src/app/patient/pages/new-record-page/new-record-page.component.html
+++ b/frontEnd/src/app/patient/pages/new-record-page/new-record-page.component.html
@@ -60,6 +60,7 @@
 
         <div class="flex justify-content-between">
           <button
+          *ngIf="currentRecordToUpdate"
             mat-flat-button
             color="warn"
             (click)="onDeleteRecord()"
@@ -90,3 +91,15 @@
 
   </div>
 </div>
+
+<pre>
+  currentRecordToUpdate: {{ currentRecordToUpdate | json }}
+</pre>
+
+<pre>
+  Formulario valido: {{ recordForm.valid | json }}
+</pre>
+
+<pre>
+  {{ currentRecord | json }}
+</pre>
