--- a/frontEnd/src/app/patient/pages/record-page/record-page.component.html
+++ b/frontEnd/src/app/patient/pages/record-page/record-page.component.html
@@ -1,14 +1,14 @@
 <br>
 <br>
 
-
+<!--
 <mat-toolbar color="primary" class="mat-align-center" *ngIf="showTittle">
   <h1>
     <strong> Historial clínico </strong>
   </h1>
 </mat-toolbar>
 
-<mat-divider></mat-divider>
+<mat-divider></mat-divider> -->
 
 <div class="grid bm-8 pt-2">
 
