--- a/frontEnd/src/app/auth/pages/login-page/login-page.component.html
+++ b/frontEnd/src/app/auth/pages/login-page/login-page.component.html
@@ -1,6 +1,12 @@
 
 <div class="flex flex-column">
 
+  <div class="text-center">
+    <img src="assets\logo_hospiTEC.png"
+    style="width: 550px;" alt="logo">
+    <!-- <h4 class="mt-1 mb-5 pb-1">Lab CE</h4> -->
+  </div>
+
   <span class="text-lg mb-4">Login</span>
 
   <form class="flex flex-column" [formGroup]="loginForm" (ngSubmit)="onLogin()">
@@ -32,3 +38,10 @@
   </div>
 
 </div>
+
+
+
+
+
+
+
