--- a/frontEnd/src/app/auth/pages/login-page/login-page.component.html
+++ b/frontEnd/src/app/auth/pages/login-page/login-page.component.html
@@ -7,11 +7,11 @@
     <!-- <h4 class="mt-1 mb-5 pb-1">Lab CE</h4> -->
   </div>
 
-  <span class="text-lg mb-4">Login</span>
+  <span class="text-lg mb-4">Inicio de sesión</span>
 
   <form class="flex flex-column" [formGroup]="loginForm" (ngSubmit)="onLogin()">
     <mat-form-field>
-      <mat-label>Usuario</mat-label>
+      <mat-label>Correo electrónico</mat-label>
       <input type="text"
       matInput placeholder="Correo"
       formControlName="email"
