[ADD] grade page

--- a/frontEnd/src/app/patient-user/components/record-card/record-card.component.html
+++ b/frontEnd/src/app/patient-user/components/record-card/record-card.component.html
@@ -22,13 +22,13 @@
 
     <span class="spacer"></span>
 
-    <!-- <button mat-button
+    <button mat-button
       mat-raised
       color="primary"
-      [routerLink]="['/patient/edit/record', record.id]">
-      <mat-icon>edit</mat-icon>
-      Editar
-    </button> -->
+      [routerLink]="['/patient-user/records/grade', record.id]">
+      <mat-icon>check</mat-icon>
+      Evaluar
+    </button>
 
   </mat-card-actions>
 
