--- a/frontEnd/src/app/patient-user/pages/grade-page/grade-page.component.html
+++ b/frontEnd/src/app/patient-user/pages/grade-page/grade-page.component.html
@@ -33,7 +33,7 @@
 
     <mat-card-content>
 
-        <form>
+        <form class="grid" [formGroup]="evaluationForm" (ngSubmit)="onSubmit()">
 
           <mat-toolbar color="primary">
             <strong class="small-title">Aseo del hospital</strong>
@@ -48,7 +48,9 @@
 
           <mat-form-field class="full-width">
             <mat-label>Comentario</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput
+            formControlName="commentsCleanliness"
+            ></textarea>
           </mat-form-field>
 
           <mat-toolbar color="primary">
@@ -64,7 +66,9 @@
 
           <mat-form-field class="full-width">
             <mat-label>Comentario</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput
+            formControlName="commentsStaffTreatment"
+            ></textarea>
           </mat-form-field>
 
           <mat-toolbar color="primary">
@@ -80,7 +84,9 @@
 
           <mat-form-field class="full-width">
             <mat-label>Comentario</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput
+            formControlName="commentsAppoinmentPunctuality"
+            ></textarea>
           </mat-form-field>
 
         </form>
@@ -88,14 +94,25 @@
 
         <br>
 
+      <div class="flex justify-content-between">
+        <button
+          mat-flat-button
+          color="warn"
+          (click)="goBack()"
+        >
+        Cancelar
+        </button>
+        <span></span>
 
-      <button
-        mat-button
-        color="warn"
-        (click)="goBack()"
-      >
-        Regresar
-      </button>
+        <button
+          mat-flat-button
+          color="primary"
+          (click)="onSubmit()"
+        >
+          <mat-icon>Evaluar</mat-icon>
+          Guardar
+        </button>
+      </div>
 
     </mat-card-content>
 
