--- a/frontEnd/src/app/administrative-staff/pages/new-medical-salon/new-medical-salon.component.html
+++ b/frontEnd/src/app/administrative-staff/pages/new-medical-salon/new-medical-salon.component.html
@@ -21,7 +21,7 @@
               required
               pattern="\d*"
               inputmode="numeric"
-              formControlName="number"
+              formControlName="id"
             />
           </mat-form-field>
 
