[ADD] add & edit beds

--- a/frontEnd/src/app/administrative-staff/components/bed-card/bed-card.component.html
+++ b/frontEnd/src/app/administrative-staff/components/bed-card/bed-card.component.html
@@ -10,7 +10,7 @@
   <mat-card-content class="mt-2">
     <!-- <h4>Salón: {{  }}</h4> -->
     <p>
-      <!-- <strong> Disponibilidad: </strong> {{ equipment.amount }} -->
+      <strong> Unidad de cuidados intensivos: </strong> {{ bed.cui }}
       <br>
       <mat-chip-listbox *ngIf="bed.equipments">
         <mat-chip *ngFor="let equipment of equipments">
