--- a/frontEnd/src/app/administrative-staff/pages/new-bed-page/new-bed-page.component.html
+++ b/frontEnd/src/app/administrative-staff/pages/new-bed-page/new-bed-page.component.html
@@ -1,1 +1,84 @@
-<p>new-bed-page works!</p>
+<h1>
+  {{ currentBedToUpdate ? 'Editar' : 'Agregar'}}
+  <small>Cama</small>
+</h1>
+
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+
+        <form class="grid" [formGroup]="bedForm" (ngSubmit)="onSubmit()">
+
+          <mat-form-field class="col-12">
+            <mat-label>Número de salón</mat-label>
+            <input
+              matInput
+              type="number"
+              required
+              pattern="\d*"
+              inputmode="numeric"
+              formControlName="salonNumber"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Cantidad disponible</mat-label>
+            <input
+              matInput
+              type="number"
+              required
+              formControlName="bedNumber"
+            />
+          </mat-form-field>
+        </form>
+
+        <div class="flex justify-content-between">
+          <button
+          *ngIf="currentBedToUpdate"
+            mat-flat-button
+            color="warn"
+            (click)="onDeleteBed()"
+          >
+            Borrar
+          </button>
+          <span></span>
+
+          <button
+            mat-flat-button
+            color="primary"
+            (click)="onSubmit()"
+          >
+            <mat-icon>save</mat-icon>
+            Guardar
+          </button>
+        </div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-12 sm:col-6">
+
+    <mat-card>
+      <img src="assets\medical-bed.png" alt="no-image" mat-card-image>
+    </mat-card>
+
+  </div>
+</div>
+
+<pre>
+  Formulario valido: {{ bedForm.valid | json }}
+</pre>
+
+<pre>
+  {{ currentBed | json }}
+</pre>
+
+<pre>
+  currentBedToUpdate: {{ currentBedToUpdate | json }}
+</pre>
+
