--- a/frontEnd/src/app/administrative-staff/pages/list-procedure-page/list-procedure-page.component.html
+++ b/frontEnd/src/app/administrative-staff/pages/list-procedure-page/list-procedure-page.component.html
@@ -1,1 +1,11 @@
-<p>list-procedure-page works!</p>
+<h1>Listado de procedimientos</h1>
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+
+  <div *ngFor="let procedure of procedures"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <procedures-procedure-card [procedure]="procedure"></procedures-procedure-card>
+  </div>
+
+</div>
