--- a/frontEnd/src/app/administrative-staff/pages/new-procedure-page/new-procedure-page.component.html
+++ b/frontEnd/src/app/administrative-staff/pages/new-procedure-page/new-procedure-page.component.html
@@ -1,1 +1,93 @@
-<p>new-procedure-page works!</p>
+<h1>
+  {{ currentProcedureToUpdate ? 'Editar' : 'Agregar'}}
+  <small>salón</small>
+</h1>
+
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+
+        <form class="grid" [formGroup]="procedureForm" (ngSubmit)="onSubmit()">
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Nombre</mat-label>
+            <input
+              matInput
+              type="text"
+              required
+              formControlName="name"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Duración</mat-label>
+            <input
+              matInput
+              type="number"
+              required
+              formControlName="duration"
+            />
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Descripción</mat-label>
+            <input
+              matInput
+              type="text"
+              required
+              formControlName="description"
+            />
+          </mat-form-field>
+
+        </form>
+
+        <div class="flex justify-content-between">
+          <button
+          *ngIf="currentProcedureToUpdate"
+            mat-flat-button
+            color="warn"
+            (click)="onDeleteProcedure()"
+          >
+            Borrar
+          </button>
+          <span></span>
+
+          <button
+            mat-flat-button
+            color="primary"
+            (click)="onSubmit()"
+          >
+            <mat-icon>save</mat-icon>
+            Guardar
+          </button>
+        </div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-12 sm:col-6">
+
+    <mat-card>
+      <img [src]=" currentProcedure | procedureImage " alt="no-image" mat-card-image>
+    </mat-card>
+
+  </div>
+</div>
+
+<pre>
+  Formulario valido: {{ procedureForm.valid | json }}
+</pre>
+
+<pre>
+  {{ currentProcedure | json }}
+</pre>
+
+<pre>
+  currentProcedureToUpdate: {{ currentProcedureToUpdate | json }}
+</pre>
+
