--- a/frontEnd/src/app/administrative-staff/pages/list-staff-page/list-staff-page.component.html
+++ b/frontEnd/src/app/administrative-staff/pages/list-staff-page/list-staff-page.component.html
@@ -1,1 +1,11 @@
-<p>list-staff-page works!</p>
+<h1>Personal del hospital</h1>
+<mat-divider></mat-divider>
+
+<div class="grid bm-8 pt-2">
+
+  <div *ngFor="let staff of staffs"
+    class="col-12 sm:col-4 md:col-3 xl:col-2">
+    <personals-personal-card [personal]="staff"></personals-personal-card>
+  </div>
+
+</div>
